Add header menu to template

--- a/wp-content/themes/mr/index.html
+++ b/wp-content/themes/mr/index.html
@@ -14,6 +14,16 @@
     <header class="site-header">
       <h1>MR.</h1>
     </header>
+    <nav class="header-menu">
+      <label for="showmenu" class="showmenu-label">Menu</label>
+      <input type="checkbox" class="showmenu" name="showmenu" id="showmenu">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Blog</a></li>
+      </ul>
+    </nav>
     <div class="galleria-wrapper">
       <div class="galleria">
         <img src="images/galleriatest/rawmaterial_01.jpg" alt="">
@@ -30,7 +40,7 @@
        <div class="content">
         <input class="show-content" type="checkbox" id="show-content" name="show-content"> 
         <header class="content-header">
-          <label class="content-toggle" for="show-content">i</label>
+          <label class="content-toggle" for="show-content">↑</label>
           <h1 class="page-title">Raw Material: Llareggub Revisited</h1>
           <!-- Production date - ACF datepicker Field maybe only show year?? Will discuss with Marc R-->
           <div class="date">May 2014</div>
