--- a/wp-content/themes/mr/index.html
+++ b/wp-content/themes/mr/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css">
   <script src="js/jquery-min.js" type="text/javascript"></script>
   <script src="js/galleria/galleria-1.3.min.js"></script>
-  <script src="js/theme-scripts.js" type="text/javascript"></script>
 </head>
 <body class="body index">
   <div class="site-wrapper">
@@ -36,6 +35,8 @@
 
       </div>
     </div>
+
+    
     <div class="content-wrapper">
        <div class="content">
         <input class="show-content" type="checkbox" id="show-content" name="show-content"> 
@@ -56,5 +57,14 @@
     </div>
    
   </div>
+
+
 </body>
+
+<script type="text/javascript">
+    jQuery(document).ready(function($){
+      Galleria.loadTheme("js/galleria/themes/marcrees/galleria.marcrees.js");
+      Galleria.run('.galleria');
+  });
+  </script>
 </html>
