--- a/wp-content/themes/mr/index.html
+++ b/wp-content/themes/mr/index.html
@@ -1,70 +1,93 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="initial-scale=1.0">
-  <title>index</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="js/jquery-min.js" type="text/javascript"></script>
-  <script src="js/galleria/galleria-1.3.min.js"></script>
+	<meta charset="utf-8">
+	<meta name="viewport" content="initial-scale=1.0">
+	<title>index</title>
+	<link rel="stylesheet" href="style.css">
+	<script src="js/jquery-min.js" type="text/javascript"></script>
+	<script src="js/galleria/galleria-1.3.min.js"></script>
+	<!-- <script src="js/theme-scripts.js"></script> -->
 </head>
 <body class="body index">
-  <div class="site-wrapper">
-    <header class="site-header">
-      <h1>MR.</h1>
-    </header>
-    <nav class="header-menu">
-      <label for="showmenu" class="showmenu-label">Menu</label>
-      <input type="checkbox" class="showmenu" name="showmenu" id="showmenu">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Blog</a></li>
-      </ul>
-    </nav>
-    <div class="galleria-wrapper">
-      <div class="galleria">
-        <img src="images/galleriatest/rawmaterial_01.jpg" alt="">
-        <img src="images/galleriatest/rawmaterial_02.jpg" alt="">
-        <img src="images/galleriatest/rawmaterial_03.jpg" alt="">
-        <img src="images/galleriatest/rawmaterial_04.jpg" alt="">
-        <img src="images/galleriatest/rawmaterial_05.jpg" alt="">
-        
-        <a href="http://vimeo.com/89667066"><img src="images/galleriatest/rawmaterial_06.jpg"></a>
+	<div class="site-wrapper">
+		<header class="site-header">
+			<h1>MR.</h1>
+		</header>
+		<nav class="header-menu">
+			<label for="showmenu" class="showmenu-label">Menu</label>
+			<input type="checkbox" class="showmenu" name="showmenu" id="showmenu">
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Projects</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Blog</a></li>
+			</ul>
+		</nav>
+		<div class="galleria-wrapper">
+			<div class="galleria">
+				<img src="images/galleriatest/rawmaterial_01.jpg" alt="">
+				<img src="images/galleriatest/rawmaterial_02.jpg" alt="">
+				<img src="images/galleriatest/rawmaterial_03.jpg" alt="">
+				<img src="images/galleriatest/rawmaterial_04.jpg" alt="">
+				<img src="images/galleriatest/rawmaterial_05.jpg" alt="">
+				<img src="images/galleriatest/rawmaterial_06.jpg">
+			</div>
+		</div>
+		<script>
+		jQuery(document).ready(function($){
+			Galleria.loadTheme("js/galleria/themes/marcrees/galleria.marcrees.js");
+			Galleria.run('.galleria');
 
-      </div>
-    </div>
+			
+			$('.project.content').addClass('hidden');
 
-    
-    <div class="content-wrapper">
-       <div class="content">
-        <input class="show-content" type="checkbox" id="show-content" name="show-content"> 
-        <header class="content-header">
-          <label class="content-toggle" for="show-content">↑</label>
-          <h1 class="page-title">Raw Material: Llareggub Revisited</h1>
-          <!-- Production date - ACF datepicker Field maybe only show year?? Will discuss with Marc R-->
-          <div class="date">May 2014</div>
-          <!-- Production credit - probably just a text field -->
-          <p class="credit">Commissioned by National Theatre Wales in partnership BBC Wales</p>   
-        </header>
-        <div class="content-full">
-          <p>Curently I am ensconced  in a new commission for NTW in partnership BBC Wales called RAW MATERIAL: LLAREGGUB REVISITED which is part of DT 100 season and in creative cahoots with Laugharne based writer Jon Tregenna.</p>
-          <p>The event takes place in Laugharne over 4 days in May when 600 people will be taken on a fantastical journey through the place described by Dylan as, '...the strangest town in Wales.'</p>
-          <p>In Laugharne groups of 'tourists' arrive for a traditional guided tour around its iconic landmarks. The tour is hijacked by VOYCE, a wiry eccentric bearded madman who wants to present his own homage to Dylan Thomas, Laugharne and Under Milk Wood. The tour parties are presented with a plethora  of installations and interventions that give an insight into what Dylan found fascinating about the town and its people. VOYCE believes that if Dylan was alive today he would still be able to pen Under Milk Wood . VOYCE is a pilferer, a poacher and a pirate and using raw material 'found' around the town as well as local people and their stories he has created a unique  immersive experience. Along the route they will see...Several sheds. Live owls. Stuffed birds. A phantom carnival float. Salt lace. A swinging buoy. A 1950's bus. Condom sausages. A mirrored graveyard. Singing web footed cockle women. A boat-roofed library. A corrugated tin terrace. The real life Willy Nilly postman. A condemned sail. A slow-motion chattering of jack-daws. School-kids rapping Dylan. Knitted Under Milk Wood figures. Brassiere bunting. A ship-shaped bar. Bosom bread. A bloody livestock crime scene. Bible Black beer. Golden cockleshells. Black canoes and a Rolls Royce fish and chip van.</p>
-        </div>
-      </div>
-    </div>
-   
-  </div>
+			$('.content-toggle').click(function(){
+				$('.content').toggleClass('hidden');
+				$('.content').toggleClass('visible');
+			})
+			$('.content-header').click(function(){
+				$('.content').toggleClass('hidden');
+				$('.content').toggleClass('visible');
+			})
+
+
+		});
+
+		</script>
+
+		<span class="content-toggle" for="show-content">i</span>	
+		<div class="content-wrapper">
+			 <div class="content">
+				<input class="show-content" type="checkbox" id="show-content" name="show-content"> 
+				<header class="content-header">
+					<h1 class="page-title">Raw Material: Llareggub Revisited</h1>
+					<div class="meta">
+						<span class="date">May 2014</span>
+						<!-- Production credit - probably just a text field -->
+						<span class="credit">Commissioned by National Theatre Wales in partnership BBC Wales</span>
+					</div>
+				</header>
+	
+				<span>
+					<div class="content-full">
+					<p>Curently I am ensconced  in a new commission for NTW in partnership BBC Wales called RAW MATERIAL: LLAREGGUB REVISITED which is part of DT 100 season and in creative cahoots with Laugharne based writer Jon Tregenna.</p>
+					<div class="video-wrapper">
+						<iframe src="http://player.vimeo.com/video/89667066"></iframe>
+					</div>
+					<p>The event takes place in Laugharne over 4 days in May when 600 people will be taken on a fantastical journey through the place described by Dylan as, '...the strangest town in Wales.'</p>
+					<p>In Laugharne groups of 'tourists' arrive for a traditional guided tour around its iconic landmarks. The tour is hijacked by VOYCE, a wiry eccentric bearded madman who wants to present his own homage to Dylan Thomas, Laugharne and Under Milk Wood. The tour parties are presented with a plethora  of installations and interventions that give an insight into what Dylan found fascinating about the town and its people. VOYCE believes that if Dylan was alive today he would still be able to pen Under Milk Wood . VOYCE is a pilferer, a poacher and a pirate and using raw material 'found' around the town as well as local people and their stories he has created a unique  immersive experience. Along the route they will see...Several sheds. Live owls. Stuffed birds. A phantom carnival float. Salt lace. A swinging buoy. A 1950's bus. Condom sausages. A mirrored graveyard. Singing web footed cockle women. A boat-roofed library. A corrugated tin terrace. The real life Willy Nilly postman. A condemned sail. A slow-motion chattering of jack-daws. School-kids rapping Dylan. Knitted Under Milk Wood figures. Brassiere bunting. A ship-shaped bar. Bosom bread. A bloody livestock crime scene. Bible Black beer. Golden cockleshells. Black canoes and a Rolls Royce fish and chip van.</p>
+				</div>
+				</span>
+			</div>
+			</div>
+		</div>
+	 	
+	</div>
+
+
 
 
 </body>
 
-<script type="text/javascript">
-    jQuery(document).ready(function($){
-      Galleria.loadTheme("js/galleria/themes/marcrees/galleria.marcrees.js");
-      Galleria.run('.galleria');
-  });
-  </script>
 </html>
